samples/errors/inaccessible_state.sara
exemple1 := input -> output : auto {
  state state1, state2, state3  ;
  first state1 ;
  state1 : input -> output {
   ! input goto state2 ;
  }
  state2 : ! input -> true {
  }
  state3 : input -> ! output {
  }
} ;
